[gd_scene load_steps=19 format=3 uid="uid://d82jsypulsbw"]

[ext_resource type="Theme" uid="uid://br6hapg0jupnv" path="res://assets/styles/nova_purple_panel.tres" id="1_coqmp"]
[ext_resource type="Script" path="res://scenes/editors/ChartEditor.gd" id="1_f5f6h"]
[ext_resource type="Texture2D" uid="uid://y8c4a1bk8wkl" path="res://assets/images/menus/menuBGDesat.png" id="3_jjy8c"]
[ext_resource type="AudioStream" uid="uid://bydbrgy3513au" path="res://assets/sounds/hitsound.ogg" id="5_m47hh"]
[ext_resource type="Shader" path="res://assets/shaders/ChartLine.gdshader" id="7_ccjci"]
[ext_resource type="PackedScene" uid="uid://w5olx2s2jovt" path="res://scenes/gameplay/strumlines/4K.tscn" id="7_h418h"]
[ext_resource type="Theme" uid="uid://bwwcx6e50tbwu" path="res://assets/styles/nova_purple_charter.tres" id="8_87ymt"]
[ext_resource type="Script" path="res://scripts/charter/SongWindow.gd" id="8_txt3a"]
[ext_resource type="Script" path="res://scripts/charter/AssetsWindow.gd" id="8_uqes3"]
[ext_resource type="FontFile" uid="uid://coqcg7h14duny" path="res://assets/fonts/vcr.ttf" id="9_4xp5r"]
[ext_resource type="Texture2D" uid="uid://cvnq5kqghy3tp" path="res://assets/images/menus/charteditor/note.png" id="10_1xrm3"]
[ext_resource type="Script" path="res://scripts/charter/SectionWindow.gd" id="11_v6ax2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7uhct"]
shader = ExtResource("7_ccjci")
shader_parameter/panel_height = 680.0
shader_parameter/bg_color = Vector4(0.16, 0.13, 0.19, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ngy7"]
bg_color = Color(0.141176, 0.0980392, 0.211765, 1)
border_width_left = 2
border_width_bottom = 2
border_color = Color(0.45098, 0.305882, 0.678431, 1)
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yrcxt"]
bg_color = Color(0.10005, 0.069, 0.15, 1)
border_width_left = 2
border_width_bottom = 2
border_color = Color(0.45098, 0.305882, 0.678431, 1)
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eukpm"]
bg_color = Color(0.211765, 0.14902, 0.321569, 1)
border_width_left = 2
border_width_bottom = 2
border_color = Color(0.45098, 0.305882, 0.678431, 1)
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w644q"]
bg_color = Color(0.168627, 0.141176, 0.211765, 1)
border_width_left = 2
border_width_bottom = 2
border_color = Color(0.45098, 0.305882, 0.678431, 1)
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxpdd"]
bg_color = Color(0.10005, 0.069, 0.15, 1)
border_width_left = 2
border_width_bottom = 2
border_color = Color(0.45098, 0.305882, 0.678431, 1)
corner_radius_bottom_left = 3

[node name="ChartEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme = ExtResource("1_coqmp")
script = ExtResource("1_f5f6h")
metadata/_edit_lock_ = true
metadata/_edit_vertical_guides_ = []
metadata/_edit_horizontal_guides_ = []

[node name="MenuBgDesat" type="Sprite2D" parent="."]
modulate = Color(0.160784, 0.129412, 0.188235, 0.854902)
position = Vector2(640, 365)
texture = ExtResource("3_jjy8c")
metadata/_edit_lock_ = true

[node name="sounds" type="Node" parent="."]

[node name="hitsound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("5_m47hh")
volume_db = 10.0

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -340.0
offset_right = 205.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="OpponentLane" type="Panel" parent="GridContainer"]
material = SubResource("ShaderMaterial_7uhct")
custom_minimum_size = Vector2(200, 680)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_coqmp")

[node name="PlayerLane" type="Panel" parent="GridContainer"]
material = SubResource("ShaderMaterial_7uhct")
custom_minimum_size = Vector2(200, 680)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_coqmp")

[node name="NotesGroup" type="CanvasGroup" parent="."]

[node name="StrumLine" type="Line2D" parent="."]
z_index = 2
position = Vector2(435, 20)
points = PackedVector2Array(0, 0, 410, 0)
width = 5.0
begin_cap_mode = 2
end_cap_mode = 2

[node name="OpponentStrum" parent="StrumLine" instance=ExtResource("7_h418h")]
position = Vector2(99, 21)
scale = Vector2(0.395, 0.395)
handle_input = false

[node name="1" parent="StrumLine/OpponentStrum" index="0"]
position = Vector2(-190, 0)

[node name="2" parent="StrumLine/OpponentStrum" index="1"]
position = Vector2(-62, 0)

[node name="3" parent="StrumLine/OpponentStrum" index="2"]
position = Vector2(65, 0)

[node name="4" parent="StrumLine/OpponentStrum" index="3"]
position = Vector2(190, 0)

[node name="PlayerStrum" parent="StrumLine" instance=ExtResource("7_h418h")]
position = Vector2(309, 21)
scale = Vector2(0.395, 0.395)
handle_input = false

[node name="1" parent="StrumLine/PlayerStrum" index="0"]
position = Vector2(-190, 0)

[node name="2" parent="StrumLine/PlayerStrum" index="1"]
position = Vector2(-62, 0)

[node name="3" parent="StrumLine/PlayerStrum" index="2"]
position = Vector2(65, 0)

[node name="4" parent="StrumLine/PlayerStrum" index="3"]
position = Vector2(190, 0)

[node name="HoverArrow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.490196)
z_index = 2
position = Vector2(-35, -19)
scale = Vector2(0.275, 0.275)
texture = ExtResource("10_1xrm3")

[node name="song" type="Window" parent="."]
title = "Song Data"
position = Vector2i(50, 100)
size = Vector2i(200, 200)
min_size = Vector2i(65, 65)
content_scale_size = Vector2i(150, 150)
content_scale_mode = 2
content_scale_aspect = 4
theme = ExtResource("8_87ymt")
script = ExtResource("8_txt3a")

[node name="Panel" type="Panel" parent="song"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme = ExtResource("8_87ymt")

[node name="ScrollContainer" type="ScrollContainer" parent="song/Panel"]
clip_contents = false
custom_minimum_size = Vector2(145, 145)
layout_mode = 0
offset_left = 3.0
offset_right = 150.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="song/Panel/ScrollContainer"]
custom_minimum_size = Vector2(136, 250)
layout_mode = 2
theme_override_constants/separation = 2

[node name="SongLabel" type="Label" parent="song/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_87ymt")
text = "Song Name"

[node name="SongName" type="LineEdit" parent="song/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_87ymt")
text = "Bopeebo"

[node name="HSeparator" type="HSeparator" parent="song/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="BPM" type="SpinBox" parent="song/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 1
theme = ExtResource("8_87ymt")
min_value = 60.0
max_value = 500.0
value = 60.0
suffix = "BPM"

[node name="ScrollSpeed" type="SpinBox" parent="song/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "The scroll speed of the notes."
mouse_default_cursor_shape = 1
theme = ExtResource("8_87ymt")
min_value = 1.0
max_value = 10.0
step = 0.1
value = 2.5
prefix = "Scroll:"
custom_arrow_step = 0.1

[node name="HSeparator2" type="HSeparator" parent="song/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveSong" type="Button" parent="song/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Save Song"

[node name="ReloadAudio" type="Button" parent="song/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Reload Audio"

[node name="LoadJSON" type="Button" parent="song/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Load Different JSON"

[node name="assets" type="Window" parent="."]
title = "Song Assets"
position = Vector2i(50, 341)
size = Vector2i(200, 200)
min_size = Vector2i(65, 65)
content_scale_size = Vector2i(150, 150)
content_scale_mode = 2
content_scale_aspect = 4
theme = ExtResource("8_87ymt")
script = ExtResource("8_uqes3")

[node name="Panel" type="Panel" parent="assets"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme = ExtResource("8_87ymt")

[node name="ScrollContainer" type="ScrollContainer" parent="assets/Panel"]
clip_contents = false
custom_minimum_size = Vector2(145, 145)
layout_mode = 0
offset_left = 3.0
offset_right = 150.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="assets/Panel/ScrollContainer"]
custom_minimum_size = Vector2(147, 280)
layout_mode = 2
theme_override_constants/separation = 30

[node name="Player" type="Label" parent="assets/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_87ymt")
text = "Player: bf"

[node name="SwitchButton" type="Button" parent="assets/Panel/ScrollContainer/VBoxContainer/Player"]
layout_mode = 2
offset_top = 15.0
offset_right = 135.0
offset_bottom = 40.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Change"

[node name="Opponent" type="Label" parent="assets/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_87ymt")
text = "Opponent: dad"

[node name="SwitchButton" type="Button" parent="assets/Panel/ScrollContainer/VBoxContainer/Opponent"]
layout_mode = 2
offset_top = 15.0
offset_right = 135.0
offset_bottom = 40.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Change"

[node name="Spectator" type="Label" parent="assets/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_87ymt")
text = "Spectator: gf"

[node name="SwitchButton" type="Button" parent="assets/Panel/ScrollContainer/VBoxContainer/Spectator"]
layout_mode = 2
offset_top = 15.0
offset_right = 135.0
offset_bottom = 40.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Change"

[node name="Stage" type="Label" parent="assets/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_87ymt")
text = "Stage: stage"

[node name="SwitchButton" type="Button" parent="assets/Panel/ScrollContainer/VBoxContainer/Stage"]
layout_mode = 2
offset_top = 15.0
offset_right = 135.0
offset_bottom = 40.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Change"

[node name="UISkin" type="Label" parent="assets/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_87ymt")
text = "UI Skin: default"

[node name="SwitchButton" type="Button" parent="assets/Panel/ScrollContainer/VBoxContainer/UISkin"]
layout_mode = 2
offset_top = 15.0
offset_right = 135.0
offset_bottom = 40.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Change"

[node name="section" type="Window" parent="."]
title = "Section Data"
position = Vector2i(1040, 100)
size = Vector2i(200, 200)
min_size = Vector2i(65, 65)
content_scale_size = Vector2i(150, 150)
content_scale_mode = 2
content_scale_aspect = 4
theme = ExtResource("8_87ymt")
script = ExtResource("11_v6ax2")

[node name="Panel" type="Panel" parent="section"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme = ExtResource("8_87ymt")

[node name="ScrollContainer" type="ScrollContainer" parent="section/Panel"]
clip_contents = false
custom_minimum_size = Vector2(145, 145)
layout_mode = 0
offset_left = 3.0
offset_right = 150.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="section/Panel/ScrollContainer"]
custom_minimum_size = Vector2(136, 350)
layout_mode = 2
theme_override_constants/separation = 4

[node name="PlayerCam" type="CheckBox" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
theme_override_font_sizes/font_size = 12
text = "Camera on Player"

[node name="HSeparator3" type="HSeparator" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="BpmCheck" type="CheckBox" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
theme_override_font_sizes/font_size = 12
text = "Change BPM"

[node name="BPMSpin" type="SpinBox" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "The BPM the section will change to."
mouse_default_cursor_shape = 1
theme = ExtResource("8_87ymt")
min_value = 60.0
max_value = 500.0
value = 60.0
suffix = "BPM"

[node name="HSeparator4" type="HSeparator" parent="section/Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="Swap" type="Button" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Swap Section"

[node name="Clear" type="Button" parent="section/Panel/ScrollContainer/VBoxContainer"]
modulate = Color(1, 0, 0.298039, 1)
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Clear Section"

[node name="HSeparator5" type="HSeparator" parent="section/Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="DymLabel" type="Label" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_87ymt")
text = "Dynamic Pasting"

[node name="CamDynamic" type="OptionButton" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Whether to swap the section when
the copied camera target is different
from the current camera target."
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
item_count = 4
selected = 1
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Only Copy/Paste"
popup/item_1/id = 1
popup/item_2/text = "Only Copy Last"
popup/item_2/id = 2
popup/item_3/text = "Both"
popup/item_3/id = 3

[node name="Copy" type="Button" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Copy Section"

[node name="Paste" type="Button" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
text = "Paste Section"

[node name="HSeparator6" type="HSeparator" parent="section/Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="CopyLast" type="Button" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme = ExtResource("8_87ymt")
theme_override_font_sizes/font_size = 12
text = "Copy Last Section"

[node name="LastSpin" type="SpinBox" parent="section/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_87ymt")
min_value = 1.0
max_value = 99999.0
value = 1.0
suffix = "sections back"

[node name="note" type="Window" parent="."]
title = "Note Data"
position = Vector2i(1040, 341)
size = Vector2i(200, 200)
min_size = Vector2i(65, 65)
content_scale_size = Vector2i(150, 150)
content_scale_mode = 2
content_scale_aspect = 4
theme = ExtResource("8_87ymt")

[node name="Panel" type="Panel" parent="note"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme = ExtResource("8_87ymt")

[node name="CharDialog" type="FileDialog" parent="."]
title = "Select a Character"
initial_position = 2
size = Vector2i(500, 500)
theme = ExtResource("8_87ymt")
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
root_subfolder = "res://scenes/gameplay/characters"
filters = PackedStringArray("*.tscn")

[node name="StageDialog" type="FileDialog" parent="."]
title = "Select a Stage"
initial_position = 2
size = Vector2i(500, 500)
theme = ExtResource("8_87ymt")
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
root_subfolder = "res://scenes/gameplay/stages"
filters = PackedStringArray("*.tscn")

[node name="UISkinDialog" type="FileDialog" parent="."]
title = "Select a UI Skin"
initial_position = 2
size = Vector2i(500, 500)
theme = ExtResource("8_87ymt")
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
root_subfolder = "res://scenes/gameplay/ui_skins/"
filters = PackedStringArray("*.tscn")

[node name="SaveDialog" type="FileDialog" parent="."]
title = "Save Song JSON"
initial_position = 2
size = Vector2i(500, 500)
theme = ExtResource("8_87ymt")
ok_button_text = "Save"
mode_overrides_title = false
root_subfolder = "res://assets/songs/"
filters = PackedStringArray("*.json")

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Load Song JSON"
initial_position = 2
size = Vector2i(500, 500)
theme = ExtResource("8_87ymt")
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
root_subfolder = "res://assets/songs/"
filters = PackedStringArray("*.json")

[node name="PosInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -110.0
offset_right = 228.0
offset_bottom = -5.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("9_4xp5r")
theme_override_font_sizes/font_size = 20
text = "0:00 / 4:20 (laugh)

Step: 0
Beat: 0
Section: 0
Snap: 1/16"

[node name="TestSong" type="MenuButton" parent="."]
layout_mode = 0
offset_left = 1180.0
offset_right = 1280.0
offset_bottom = 31.0
tooltip_text = "Test the song to see how
your chart is like so far."
theme = ExtResource("8_87ymt")
text = "Test"
flat = false
switch_on_hover = true
item_count = 3
popup/item_0/text = "Play Song"
popup/item_0/checkable = 2
popup/item_0/id = 0
popup/item_1/text = "Play Here"
popup/item_1/checkable = 2
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Test Chart"
popup/item_2/checkable = 2
popup/item_2/id = 2

[node name="WindowToggle" type="MenuButton" parent="."]
layout_mode = 0
offset_left = 1080.0
offset_right = 1180.0
offset_bottom = 31.0
tooltip_text = "Toggles the visiblity of
windows you may not need."
theme = ExtResource("8_87ymt")
text = "Window"
flat = false
switch_on_hover = true
item_count = 4
popup/item_0/text = "Song"
popup/item_0/checkable = 1
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "Assets"
popup/item_1/checkable = 1
popup/item_1/checked = true
popup/item_1/id = 1
popup/item_2/text = "Section"
popup/item_2/checkable = 1
popup/item_2/checked = true
popup/item_2/id = 2
popup/item_3/text = "Note"
popup/item_3/checkable = 1
popup/item_3/checked = true
popup/item_3/id = 3

[node name="Settings" type="MenuButton" parent="."]
layout_mode = 0
offset_left = 980.0
offset_right = 1080.0
offset_bottom = 31.0
tooltip_text = "Change the way you chart."
theme = ExtResource("8_87ymt")
theme_override_styles/normal = SubResource("StyleBoxFlat_2ngy7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yrcxt")
theme_override_styles/hover = SubResource("StyleBoxFlat_eukpm")
theme_override_styles/disabled = SubResource("StyleBoxFlat_w644q")
theme_override_styles/focus = SubResource("StyleBoxFlat_wxpdd")
text = "Settings"
flat = false
switch_on_hover = true
item_count = 1
popup/item_0/text = "Hitsounds"
popup/item_0/checkable = 1
popup/item_0/checked = true
popup/item_0/id = 0

[node name="TrackMute" type="PopupMenu" parent="Settings"]

[connection signal="text_changed" from="song/Panel/ScrollContainer/VBoxContainer/SongName" to="song" method="_song_name_changed"]
[connection signal="value_changed" from="song/Panel/ScrollContainer/VBoxContainer/BPM" to="song" method="_bpm_changed"]
[connection signal="value_changed" from="song/Panel/ScrollContainer/VBoxContainer/ScrollSpeed" to="song" method="_speed_changed"]
[connection signal="button_up" from="song/Panel/ScrollContainer/VBoxContainer/SaveSong" to="song" method="_open_save"]
[connection signal="button_up" from="song/Panel/ScrollContainer/VBoxContainer/ReloadAudio" to="song" method="_reload_audio"]
[connection signal="button_up" from="song/Panel/ScrollContainer/VBoxContainer/LoadJSON" to="song" method="_open_load"]
[connection signal="button_up" from="assets/Panel/ScrollContainer/VBoxContainer/Player/SwitchButton" to="assets" method="_switch_player"]
[connection signal="button_up" from="assets/Panel/ScrollContainer/VBoxContainer/Opponent/SwitchButton" to="assets" method="_switch_opponent"]
[connection signal="button_up" from="assets/Panel/ScrollContainer/VBoxContainer/Spectator/SwitchButton" to="assets" method="_switch_spectator"]
[connection signal="button_up" from="assets/Panel/ScrollContainer/VBoxContainer/Stage/SwitchButton" to="assets" method="_switch_stage"]
[connection signal="button_up" from="assets/Panel/ScrollContainer/VBoxContainer/UISkin/SwitchButton" to="assets" method="_switch_ui_skin"]
[connection signal="toggled" from="section/Panel/ScrollContainer/VBoxContainer/PlayerCam" to="section" method="_set_cam_target"]
[connection signal="toggled" from="section/Panel/ScrollContainer/VBoxContainer/BpmCheck" to="section" method="_set_change_bpm"]
[connection signal="value_changed" from="section/Panel/ScrollContainer/VBoxContainer/BPMSpin" to="section" method="_set_bpm"]
[connection signal="button_up" from="section/Panel/ScrollContainer/VBoxContainer/Swap" to="section" method="_swap_section"]
[connection signal="button_up" from="section/Panel/ScrollContainer/VBoxContainer/Clear" to="section" method="_clear_section"]
[connection signal="button_up" from="section/Panel/ScrollContainer/VBoxContainer/Copy" to="section" method="_copy_section"]
[connection signal="button_up" from="section/Panel/ScrollContainer/VBoxContainer/Paste" to="section" method="_paste_section"]
[connection signal="button_up" from="section/Panel/ScrollContainer/VBoxContainer/CopyLast" to="section" method="_copy_last_section"]
[connection signal="canceled" from="CharDialog" to="assets" method="enable_switches"]
[connection signal="confirmed" from="CharDialog" to="assets" method="enable_switches"]
[connection signal="file_selected" from="CharDialog" to="assets" method="select_char"]
[connection signal="canceled" from="StageDialog" to="assets" method="enable_switches"]
[connection signal="confirmed" from="StageDialog" to="assets" method="enable_switches"]
[connection signal="file_selected" from="StageDialog" to="assets" method="select_stage"]
[connection signal="canceled" from="UISkinDialog" to="song" method="enable_switches"]
[connection signal="confirmed" from="UISkinDialog" to="assets" method="enable_switches"]
[connection signal="file_selected" from="UISkinDialog" to="assets" method="select_ui_skin"]
[connection signal="canceled" from="SaveDialog" to="song" method="enable_switches"]
[connection signal="confirmed" from="SaveDialog" to="song" method="enable_switches"]
[connection signal="file_selected" from="SaveDialog" to="song" method="_save_song"]
[connection signal="canceled" from="LoadDialog" to="song" method="enable_switches"]
[connection signal="confirmed" from="LoadDialog" to="song" method="enable_switches"]
[connection signal="file_selected" from="LoadDialog" to="song" method="_load_song"]
[connection signal="id_pressed" from="Settings/TrackMute" to="." method="_mute_track"]

[editable path="StrumLine/OpponentStrum"]
[editable path="StrumLine/PlayerStrum"]
